# pyorion

./: .gitignore  404.html  Cargo.toml  LICENSE.spdx  LICENSE_MIT  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/rulesets/: main-branch-protection.yml
.github/workflows/: build_test.yaml  docs.yml  lint.yml  test.yml
api/: index.html
crates/pyorion_macros/: Cargo.toml
crates/pyorion_macros/src/: lib.rs
crates/pyorion_options/: Cargo.toml
crates/pyorion_options/src/: window.rs
docs/: api.md  index.md  usage.md
examples/all_api/: __main__.py  commands.py  config.py
examples/all_api/web/: index.html
examples/basic/: __main__.py  commands.py  config.py
examples/basic/web/: index.html  main.js  style.css
examples/nicegui/: config.py  main.py
pyorion/: __init__.py  __main__.py  _pyorion.pyi  pyinvoke.py  types.py  utils.py
pyorion/api/: clipboard.py  controlcenter.py  dialog.py  dirs.py  webview.py  window.py
pyorion/control/: webview.py  window.py
pyorion/runtime/: __init__.py  connections.py  core.py  runtime.py  runtime_handle.py
pyorion/setup/: types.py
scripts/: python-fmt.sh  release.py
search/: search_index.json
src/: api_manager.rs  context.rs  core.rs  lib.rs  utils.rs
src/api/: clipboard.rs  control_center.rs  dialog.rs  dirs.rs  mod.rs  resource.rs  webview.rs  window.rs
src/api/vibrancy/: macos.rs  mod.rs  windows.rs
src/assets/: invoke.js  mod.rs  pyorion_socket.js  websocket.js
src/connections/: handler.rs  mod.rs  unix_conn.rs  utils.rs  windows_conn.rs
src/window/: builder.rs  mod.rs
tests/: test_core.py
usage/: index.html
