[package]
name = "pyorion"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyorion"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-log = "0.12"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pyo3-async-runtimes-macros = "0.25"
sysinfo = { version = "0.37.0", features = ["network", "system"] }
network-interface = { version = "2.0.3", features = ["serde"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "fs", "io-util","signal"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-rustls = "0.26.2"
rustls = "0.23.31"
rustls-webpki = "0.103.4"
anyhow = "1.0.91"
bytes = "1.10.1"
crossbeam-channel = "0.5.15"
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4"] }
tao = { version = "0.34.2", features = ["serde"] }
wry = { version ="0.53.2", features = ["devtools"] }
url = { version = "2.5.7", features = ["serde"] }
once_cell = "1.21.3"
image = "0.25.6"
mime_guess = "2.0.5"
directories = "6.0.0"
pyorion_macros = { path = "./crates/pyorion_macros" }
pyorion_options = { path = "./crates/pyorion_options" }
base64 = "0.22.1"
infer = "0.19.0"
ctrlc = "3.4.7"

[workspace]
members = [
    "crates/pyorion_macros",
    "crates/pyorion_options"
]

[target.'cfg(unix)'.dependencies]
signal-hook-tokio = "0.3.1"




[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security_Authorization"
]}
runas = "=1.2.0"
deelevate = "0.2.0"
winreg = "0.55.0"
winapi = { version = "0.3.9", features = [
  "winbase",
  "fileapi",
  "winnt",
  "handleapi",
  "errhandlingapi",
  "minwindef",
  "winerror",
  "tlhelp32",
  "processthreadsapi",
  "winhttp",
  "winreg",
] }

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
